[package]
name = "de-micro"
version = "0.1.0"
edition = "2021"

[dependencies]
data-encoding = "2.11.0"
iroh = "0.98.2"
macroquad = { version = "0.4", features = ["audio"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
